# cryoet-ev-post-processing

./: .gitignore  README.md  ev-label.py  ev-post-processing.py  ev-visualise.py  pyproject.toml  requirements.txt
.github/: commit-template  pr-template
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
docs/: analyse.md  config.md  label.md  visualise.md
src/evaluator/: __init__.py  __main__.py  config.toml  main.py  utils.py  version.toml
src/evaluator/cli/: analyse.py  cli.py  config.py  label.py  license.py  version.py  visualise.py
src/evaluator/cli/commands/: config.py  license.py  version.py
src/evaluator/commands/: analyse.py  config.py  label.py  license.py  version.py  visualise.py
src/evaluator/utils/: config_management.py  display.py  file_handling.py  missing_wedge.py  mrc.py  paths.py  settings.py  synthetic.py
tests/: conftest.py  tests.md
tests/cli/: cli_test.py
tests/data/: generate_test_data.py
tests/integration/: analyse_integration_test.py  config_integration_test.py  label_integration_test.py
tests/unit/: analyse_unit_test.py  config_unit_test.py  conftest.py  display_unit_test.py  mrc_unit_test.py  paths_unit_test.py
tools/benchmark/missing-wedge/: benchmark_missing_wedge.py  benchmark_missing_wedge_analysis.R
