[project]
name = "EValuator"
version = "0.7.0"
description = "A command line tool for automated morphological analysis and visualisation of extracellular vesicles (EVs) from cryo-electron tomography (cryo-ET) data."
authors = [
    { name = "Samuel Holland", email = "hol_sam@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "matplotlib>=3.10.8",
    "mrcfile>=1.5.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "platformdirs>=4.9.4",
    "rich>=14.3.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tomli-w>=1.2.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
    "typing>=3.10.0.0",
]

[project.scripts]
evaluator = "evaluator.main:evaluator"

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ['src/evaluator/config.toml','docs/**']

[tool.uv_build]
include = [
    "LICENSE",   # Include the LICENSE file
    "README.md", # Include README or other files
    "src/evaluator/config.toml",
    "docs/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=evaluator --cov-report=term-missing"

[tool.coverage.run]
source = ["evaluator"]
omit = [
    "src/evaluator/cli/*",           # Typer wiring; covered by CLI tests
    "src/evaluator/commands/visualise.py",  # rendering functions; visual inspection only
    "src/evaluator/utils/display.py",       # rendering functions; visual inspection only
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
